--- a/swagger-ui/index.html
+++ b/swagger-ui/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/swagger-ui-dist/swagger-ui-bundle.js"></script>
   <script>
     SwaggerUIBundle({
-      url: "/docs/api/openapi.yaml",
+      url: "../docs/api/openapi.yaml",
       dom_id: "#swagger-ui",
       deepLinking: true,
     });
